--- a/web/index.html
+++ b/web/index.html
@@ -6,11 +6,19 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Homepage</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Alessio Aresu">
+        <meta name="keywords" content="FPW, Progetto, Html">
+        <meta name="description" content="La homepage del nostro sito">
+        
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>
+            <h1>Writing is Easy, Not for me</h1>
+            <img  title="Foto homepage" alt="Mano che spara" src="img/bembem.jpg">
+        </div>
+        
     </body>
 </html>
