--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Homepage</title>
+        <title>Articoli</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Alessio Aresu">
@@ -18,6 +18,14 @@ and open the template in the editor.
         <div>
             <h1>Writing is Easy, Not for me</h1>
             <img  title="Foto homepage" alt="Mano che spara" src="img/bembem.jpg">
+        </div>
+        <div>
+            <h2>Mani belle, link fetish 2019</h2>
+            <ul>
+                <li> <a href="https://www.fcinternews.it/">Notizie inter 3-2 godo ancora</a> </li>
+                <li> <a href="https://www.instagram.com/chiaraferragni/?hl=it">Mani di chiara ferragni</a>  </li>
+                <li> </li>
+            </ul>
         </div>
         
     </body>
