Prima versione HTML di articoli

--- a/web/articoli.html
+++ b/web/articoli.html
@@ -14,6 +14,23 @@ and open the template in the editor.
         <meta name="description" content="Gli articoli del nostro sito">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>
+            <h1> Writing is easy! <a href="index.html"> O forse no</a></h1>
+        </div>
+        <div>
+            <h2>Tabella articoli</h2>
+            <table>
+                <tr>
+                    <th>Nome autore</th>
+                    <th>Data</th>
+                    <th>Articolo</th>
+                </tr>
+                <tr>
+                    <td>Alessio Aresu</td>
+                    <td>18/03/2019</td>
+                    <td>Questa e' la maxi storia di come la mia web page e' iniziata!</td>
+                </tr>
+            </table>
+        </div>
     </body>
 </html>
