--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,8 @@ and open the template in the editor.
             <ul>
                 <li> <a href="https://www.fcinternews.it/">Notizie inter 3-2 godo ancora</a> </li>
                 <li> <a href="https://www.instagram.com/chiaraferragni/?hl=it">Mani di chiara ferragni</a>  </li>
-                <li> </li>
+                <li> <a href="articoli.html">Articoli del sito</a></li>
+                <li> <a href="registrazione.html">Registrati!</a></li>
             </ul>
         </div>
         
